style.css
/* ... */
header .hero .imgs .drink {
  width: 150px;
  bottom: 5px;
  right: 70px;
  right: -500px; /*animated*/
  animation: animateDrink 0.5s 1.8s forwards;
}
@keyframes animateDrink {
  to {
    right: 70px;
  }
}
header .hero .imgs .potato {
  width: 300px;
  right: 340px;
  bottom: 88px;
  opacity: 1;
  opacity: 0; /*animated*/
  animation: animatePotato 0.5s 2.5s forwards;
}
@keyframes animatePotato {
  to {
    opacity: 1;
  }
}

header .discount {
  position: absolute;
  background: #df1b1c;
  color: white;
  border: 3px dashed white;
  width: 150px;
  height: 150px;
  right: 435px;
  bottom: 25px;
  border-radius: 75px;
  box-shadow: 0px 0px 0px 10px #df1b1c;
  font-size: 60px;
  font-family: "Bebas Neue", cursive;
  opacity: 1;
  opacity: 0; /*animated*/
  animation: animateDiscount 0.5s 2.8s forwards;
}
@keyframes animateDiscount {
  to {
    opacity: 1;
  }
}
header .discount span {
  font-size: 30px;
}
header .discount span:last-child {
  display: flex;
  justify-content: center;
  line-height: 25px;
  font-size: 40px;
  letter-spacing: 5px;
  display: block;
}

/* Responsive Header */

@media screen and (max-width: 1140px) {
  header .wrapper {
    padding: 15px;
  }

  header .caption p:first-child {
    font-size: calc(24px / 1.4);
  }
  header .caption p:last-child span {
    font-size: calc(110px / 1.4);
  }

  header .hero .imgs .drink {
    width: calc(150px / 1.2);
  }
  header .hero .imgs .potato {
    width: calc(300px / 1.2);
  }
  header .hero .imgs .burger {
    width: calc(370px / 1.2);
  }
  header .discount {
    width: calc(150px / 1.2);
    height: calc(150px / 1.2);
    font-size: calc(60px / 1.2);
  }
}

@media screen and (max-width: 770px) {
  header .contact {
    display: none;
  }
  header .haburger-menu {
    display: block;
  }
  header nav {
    padding-right: 0;
    display: none;
  }
  .show {
    display: block;
  }
  header nav ul {
    flex-direction: column;
    align-items: center;
    background: #42200b;
    padding: 20px 0;
  }
  header nav ul li {
    margin: 5px;
  }
  header nav ul li a {
    color: white;
  }
  header .hero {
    flex-direction: column-reverse;
  }
  header .hero .imgs {
    width: 578px;
    height: 361px;
  }
  header .discount {
    right: 370px;
  }
}
@media screen and (max-width: 600px) {
  header .hero .imgs {
    width: 440px;
    height: 290px;
  }
  header .hero .imgs .drink {
    width: calc(150px / 1.5);
  }
  @keyframes animateDrink {
    to {
      right: 7px;
    }
  }
  header .hero .imgs .potato {
    width: calc(300px / 1.5);
    right: 255px;
  }
  header .hero .imgs .burger {
    width: calc(370px / 1.5);
    left: 125px;
  }
  header .discount {
    width: calc(150px / 1.5);
    height: calc(150px / 1.5);
    font-size: calc(60px / 1.5);
    bottom: 15px;
  }
  header .hero .imgs .potato {
    right: 200px;
    bottom: 70px;
  }
  header .discount {
    right: 286px;
    font-size: calc(50px / 1.5);
  }
  header .discount span:last-child {
    font-size: 30px;
  }
}

@media screen and (max-width: 520px) {
  header .logo {
    width: 180px;
  }
  header .logo img {
    width: 100%;
  }
  header .hero .imgs {
    width: 345px;
    height: 260px;
    margin-bottom: 20px;
  }
  header .hero .imgs .drink {
    width: calc(150px / 1.7);
  }

  header .hero .imgs .potato {
    width: calc(300px / 1.7);
    right: 175px;
    bottom: 50px;
  }
  header .hero .imgs .burger {
    width: calc(370px / 1.7);
    left: 65px;
  }
  header .discount {
    width: calc(150px / 1.8);
    height: calc(150px / 1.8);
    font-size: calc(60px / 1.8);
  }
  header .discount {
    right: 225px;
    font-size: calc(50px / 1.85);
    bottom: 0;
  }
  header .discount span:last-child {
    font-size: 20px;
  }
  header .caption p:last-child span {
    font-size: 50px;
  }
}
@media screen and (max-width: 400px) {
  header .logo {
    width: 180px;
  }
  header .logo img {
    width: 100%;
  }
  header .hero .imgs {
    width: 260px;
    height: 260px;
    margin-bottom: 20px;
  }
  header .hero .imgs .drink {
    width: calc(150px / 2);
  }
  header .hero .imgs .potato {
    width: calc(300px / 2);
    right: 136px;
    bottom: 50px;
  }
  header .hero .imgs .burger {
    width: calc(370px / 2);
    left: 25px;
  }
  header .discount {
    width: calc(150px / 1.8);
    height: calc(150px / 1.8);
    font-size: calc(60px / 1.8);
  }
  header .discount {
    right: 190px;
    font-size: calc(50px / 1.85);
    bottom: 0;
  }
  header .discount span:last-child {
    font-size: 20px;
  }
  header .caption p:last-child span {
    font-size: 50px;
  }
}

/*⛔⛔ End Header ⛔⛔*/

/* 
🌳🌳 Start Section Try Today  🌳🌳 
*/

.try-today {
  width: 90%;
  margin: 100px auto;
  display: flex;
  justify-content: space-between;
}
.try-today .card-container {
  width: 48%;
  position: relative;
  text-transform: uppercase;
  font-family: "Bebas Neue", cursive;
  color: white;
}
.try-today .card-container > div {
  position: relative;
}
.try-today .card-container:last-child {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.try-today .card-container img {
  width: 100%;
}
.try-today .card-container .label {
  position: absolute;
  top: 20px;
  left: 20px;
}
.try-today .card-container .caption {
  position: absolute;
  top: 45px;
  left: 20px;
  margin-top: 5px;
  font-size: 40px;
  line-height: 35px;
}

/* Responsive Try Today */

@media screen and (max-width: 900px) {
  .try-today {
    flex-direction: column;
  }
  .try-today .card-container {
    width: 100%;
  }
}
@media screen and (max-width: 700px) {
  header {
    height: 725px;
  }
  .try-today .card-container .caption {
    font-size: 30px;
  }
}
/*⛔⛔ End Section Try Today  ⛔⛔*/

/* 
🌳🌳 Start Menu Section 🌳🌳 
*/

.menu .wrapper {
  width: 80%;
  margin: 0 auto;
  text-align: center;
}
/* ... */

